Correct mistakes  letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
          --secondary-text-color-theme-light: #434455;
          --accent-color: #404BBF;
         }
-
+   
         body {
             font-family: 'Roboto', sans-serif;
             color: #434455;
@@ -43,6 +43,7 @@
         font-weight: 800;
         font-size: 18px;
         line-height: 1.17;
+        letter-spacing: 0.03em;
         align-items: center;
         text-transform: uppercase;
         color: #4D5AE5;
@@ -62,23 +63,24 @@
         
         }
         
-        .menu-item {
+        .menu-link link {
         font-family: var(--primary-font);   
         font-style: normal;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
+        letter-spacing: 0.02em;
         color: #2E2F42;
         flex: none;
         text-transform: uppercase;
         cursor: pointer;
         text-decoration: none;
         }
-        .menu-item:hover,
-        .menu-item:focus {
+        
+        .menu-link link:hover,
+        .menu-link link:focus {
             color: var(--accent-color);
         }
-
         .adress {
             font-style: normal;
         }
@@ -106,6 +108,7 @@
         font-weight: 700;
         font-size: 56px;
         line-height: 1.07;
+        letter-spacing: 0.02em;
         text-align: center;
         color: #FFFFFF;
         
@@ -116,6 +119,7 @@
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
+        letter-spacing: 0.04em;
         display: flex;
         align-items: center;
         color: #FFFFFF;
@@ -133,6 +137,7 @@
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
+        letter-spacing: 0.02em;
         color: #2E2F42;
         
         }
@@ -142,6 +147,7 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
+        letter-spacing: 0.02em; 
         color: #434455;
         
         }
@@ -151,6 +157,7 @@
         font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
+        letter-spacing: 0.02em;
         text-align: center;
         text-transform: capitalize;
         color: #2E2F42;
@@ -171,6 +178,7 @@
             font-weight: 700;
             font-size: 36px;
             line-height: 1.11;
+            letter-spacing: 0.02em;
             text-align: center;
             text-transform: capitalize;
             color: var(--primery-text-color-theme-light);
@@ -184,6 +192,7 @@
             font-weight: 500;
             font-size: 20px;
             line-height: 1.2;
+            letter-spacing: 0.02em;
             text-align: center;
             color: var(--primery-text-color-theme-light);
         }
@@ -193,6 +202,7 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 1.5;
+            letter-spacing: 0.02em;
             text-align: center;
             color: var(--secondary-text-color-theme-light);
 
@@ -208,6 +218,7 @@
             font-weight: 800;
             font-size: 18px;
             line-height: 1.16;
+            letter-spacing: 0.03em;
             display: flex;
             align-items: center;
             text-transform: uppercase;
@@ -224,7 +235,7 @@
         color: var(--primery-text-color-theme-dark);
         }
        /* portfolio*/
-       
+
         .button-click {
             font-family: var(--primary-font);
         font-style: normal;
